yarn test now added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,9 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v4
+
         with:
-          test: yarn test
+          record: false
+          runTests: false
+      
+      - run: yarn test
