--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,4 @@ jobs:
         with:
           record: false
           runTests: false
-      
-      - run: yarn test
+          test: yarn test
