cypress command changed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,4 @@ jobs:
 
         with:
           record: false
-          runTests: false
-          test: yarn test
+          command: yarn test
