--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    container: cypress/browsers:node12.18.3-chrome87-ff82
+    needs: install
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -15,5 +17,6 @@ jobs:
         uses: cypress-io/github-action@v4
 
         with:
+          browser: chrome
           record: false
           command: yarn test
