--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cypress": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-state-sync": "^3.1.4",
